third_party/rust/chromium_crates_io/vendor/rustversion-1.0.19/tests/ui/bad-bound.stderr
error: expected rustc release number like 1.31, or nightly date like 2020-02-25
 --> tests/ui/bad-bound.rs:1:22
  |
1 | #[rustversion::since(stable)]
  |                      ^^^^^^

error: expected rustc release number like 1.31, or nightly date like 2020-02-25
 --> tests/ui/bad-bound.rs:4:26
  |
4 | #[rustversion::any(since(stable))]
  |                          ^^^^^^
